--- a/1.linux_community/1.1-linux_evolution.md
+++ b/1.linux_community/1.1-linux_evolution.md
@@ -1,10 +1,27 @@
 # 1.1 Linux Evolution
 
-## Introduction
+**Weight 2**
+Key knowledge areas
 
-- Linus Torvalds 1991  
+- Distributions
+- Embedded Systems
+- Linux in the Cloud
+
+Partial list of the used files, terms and utilities
+
+- Debian, Ubuntu (LTS)
+- CentOS, openSUSE, Red Hat, SUSE
+- Linux Mint, Scientific Linux
+- Raspberry Pi, Raspbian
+- Android
+
+---------------
+
+## Linux
+
+- created by Linus Torvalds in 1991  
 - Inspired by UNIX - AT&T 1970s  
-- Unix-like for x86 computers  
+- 'Unix-like' for x86 computers  
 - No Unix code in Linux but same principles & ideas
 
 ## Distributions  
@@ -14,10 +31,10 @@ Distro = Linux Kernel + selection of applications for a certain use case or  use
 ### Distro families  
 
 - **Debian** : Ian Murdock 1993 (wife Debbie = Debian)  - packages `.deb`
-  - FSF / Stallman philosophy - freedom to run/study/distribute/improve the software  
-    - No proprietary software by default  
+  - stick to FSF / Stallman philosophy - freedom to run/study/distribute/improve the software  
+    - **No proprietary software** by default  
     - **Ubuntu**: Mark Shuttleworth 2004  
-      - Easy to use and configure desktop env.  
+      - Easy to use and configure desktop/laptop env.  
       - release every 6 months. LTS every 2 years
       - Linux Mint / Raspbian / Pop!_OS ...
 - **RedHat** :started in 1994 Red Hat company - packages `.rpm`
@@ -27,32 +44,36 @@ Distro = Linux Kernel + selection of applications for a certain use case or  use
   - fee-based subscriptions  / licenses
   - CentOS / Fedora are free
   - **Fedora** founded in 2003 aimed at desktop PC / very progressive / test-bed for RHEL  
-- **SUSE** : 1994 in Germany packages `.rpm`
+- **SUSE** : 1994 in Germany - packages `.rpm`
   - YaST & zypper config. tool (package + network + setup server)
   - **SUSE Linux Enterprise Server** : commercial edition
-  - **openSUSE** 2004 is free
+  - **openSUSE** 2004 - is free
 - Others :
-  - Kali : Security
+  - Kali : security
   - QubesOS : security
   - Docker (Alpine) : containers
   - Embedded systems or smart devices ...  
 
 ## Embedded systems  
 
-Combination of hardware and software for a larger system  
-Embedded software help to control a device and access the hardware  
+Embedded software help to control a small electronic device and access the hardware
 Embedded software are mostly based on Linux kernel  
 
-- **Android**
+- ### Android
+
   - 2005 Google
-  - OS Free / Open Source (but Gmail, Maps, Chrome, PlayStore ... are proprietary )
+  - OS Free / Open Source (but Gmail, Maps, Chrome, PlayStore are proprietary)
   - Smartphones, TVs, watches, tablets, set-top boxes, cameras
-- **Raspbian**
-  - distro from Debian family for Raspberry Pi - ARM based computer with no hard disk
-  - Raspbian : started from a memory card
+
+- ### Raspbian
+
+  - distro from Debian family for Raspberry Pi an ARM based computer with no hard disk
+  - Raspbian : start from a memory card
   - Raspberry PI : small ARM based computer with GPIO pins to attach electronics devices / extension boards
   - Platform for hardware development
-- **Kodi**
+
+- ## Kodi
+    
   - distro for media center
 
 ## Cloud Computing
