--- a/1.linux_community/1.1-linux_evolution.md
+++ b/1.linux_community/1.1-linux_evolution.md
@@ -15,7 +15,7 @@ Partial list of the used files, terms and utilities
 - Raspberry Pi, Raspbian
 - Android
 
----------------
+---
 
 ## Linux
 
@@ -46,7 +46,7 @@ Distro = Linux Kernel + selection of applications for a certain use case or  use
   - **Fedora** founded in 2003 aimed at desktop PC / very progressive / test-bed for RHEL  
 - **SUSE** : 1994 in Germany - packages `.rpm`
   - YaST & zypper config. tool (package + network + setup server)
-  - **SUSE Linux Enterprise Server** : commercial edition
+  - **SUSE Linux Enterprise Server (SLES)** : commercial edition
   - **openSUSE** 2004 - is free
 - Others :
   - Kali : security
@@ -73,7 +73,7 @@ Embedded software are mostly based on Linux kernel
   - Platform for hardware development
 
 - ## Kodi
-    
+
   - distro for media center
 
 ## Cloud Computing
