--- a/1.linux_community/1.2-open_source_applications.md
+++ b/1.linux_community/1.2-open_source_applications.md
@@ -16,8 +16,7 @@ Partial list of the used files, terms and utilities
 - C, Java, JavaScript, Perl, shell, Python, PHP
 - dpkg, apt-get, rpm, yum
 
-----
-
+---
 
 ## Sofware packages
 
@@ -30,12 +29,12 @@ Partial list of the used files, terms and utilities
 
 ## Package Installation
 
-- Search: 
+- Search:
   - `apt-cache search package_name` or `apt search package_name`  
 The `apt-cache` command is used to search for packages and to list
 information about available packages
   - `yum search package_name` or `dnf search package_name`
-- Install: 
+- Install:
   - `sudo apt-get install package_name` or `sudo apt install package_name`
   - `sudo yum install package_name` or `sudo dnf install package_name`
   - `sudo`: Need to be `root` for installation
@@ -49,7 +48,7 @@ information about available packages
 ## Office applications
   
 - Apache Foundation : *Apache OpenOffice* (Apache 2.0)
-- Document Founation : *LibreOffice* (LGPLv3)
+- Document Foundation : *LibreOffice* (LGPLv3)
 - share the same code
 - compatible with Microsoft format
 - ODF is the open format (`.odt` for writer `.ods` for calc `.odp` for impress)
@@ -126,7 +125,7 @@ information about available packages
 ### JavaScript
 
 - interpreted
-- mostly use in web pages
+- mostly used in web pages
 - client oriented but now also server (node.js) ans mobile device (react native)
 
 ### C
