--- a/1.linux_community/1.3-open_source_licensing.md
+++ b/1.linux_community/1.3-open_source_licensing.md
@@ -14,8 +14,7 @@ Partial list of the used files, terms and utilities
 - Free Software, Open Source Software, FOSS, FLOSS
 - Open source business models
 
-----
-
+---
 
 ## Free software
 
@@ -29,7 +28,7 @@ Partial list of the used files, terms and utilities
 ## Open Source Software Vs Free Software
 
 - FOSS / FLOSS : Free (Libre) Open Source Software
-- Free Software foundation (FSF) - Richard Stallman - 1985 
+- Free Software foundation (FSF) - Richard Stallman - 1985
 - starts w/ GNU (GNU is Not Unix)
 - FSF : social ideology but not always pragmatic
 - OSI : Open Software Initiative is more pragmatic and business oriented
@@ -38,23 +37,25 @@ Partial list of the used files, terms and utilities
 
 ### copyleft (GNU licences)
 
-- GPL : General Public License (Linux kernel, MySQL)
+- GPL : General Public License (Linux kernel, MySQL, MariaDB, Wordpress) - strong copyleft
 - LGPL : Lesser GPL ( for libraries) - no need to publish modified code can run with other non-free components
-- AGPL : Hosted software - source code can be downloaded
+- AGPL : Hosted software - source code can be downloaded - strong copyleft
 - FDL: Free Documentation License for documentation
 - License conflict is possible
   - LGPL is a solution
-  - dual licensing (free version w/ copyleft OR commercial version)
+  - Dual licensing (free version w/ copyleft OR commercial version)
 
 ### permissive (OSI licenses)
 
 - BSD / Simplified BSD : Berkeley Software Distribution - (NetBSD, OpenBSD, FreeBSD projects, Nginx, Python...)
 - Apache v2.0 License (Apache, Android, Rancher ...)
+- MIT (Node.js, React, Leaflet, jQuery)
 
 ### Creative Commons
 
 Licensing for creative or knowledge content
 6 licenses
+
 - CC BY : name the author
 - CC BY-SA : name the author + copyleft (if modified same license)
 - CC BY-ND : no derivatives (no modification)
