--- a/1.linux_community/1.4- ict_skills.md
+++ b/1.linux_community/1.4- ict_skills.md
@@ -16,24 +16,24 @@ content
 - Privacy issues and tools
 - Use of common open source applications in presentations and projects
 
------------
+---
 
 ## Linux interfaces
 
 CLI or GUI
 
-### Desktop env. / GUI
+### Desktop env. / GUI - Graphical User Interface
 
 - Linux user can choose their GUI
 - **Gnome** : KISS - GTK (C language)
 - **KDE** : lot of settings - Qt (C++)
 
-### CLI
+### CLI - Command Line Interface
 
 - Terminal (Gnome) or Konsole (KDE) - (emulate *Teletype* / tty)
 - CTR+ALT+F# => tty console
 
-### Presentation & projest tools
+## Presentation & projest tools
 
 - LibreOffice Impress (Powerpoint-like) - `.odp` format
 - Beamer , LaTeX for presentation w/ code
@@ -70,11 +70,12 @@ DropBox, SalesForce ...
 ### cookie tracking
 
 - some cookies are used by Ad network (third parties) for tracking activities
-- 3d party cookies alo use by social networks
+- 3d party cookies alo used by social networks
 
 ### DNT
 
 Do Not Track
+
 - opt-out from tracking
 - extra flag `DNT:1` sent in http header
 
@@ -100,13 +101,13 @@ delete cookies after session
 
 - Gnu Privacy Guard (OSS version of OpenPGP)
 - Encrypt / Decrypt text and emails
-- encrypt with public key / only private key can decrypt
+- encrypt your email with public key of your recipient / only private key of recipient can decrypt
 - use your private key for signature
 
 ### Disk Encryption
 
 - stacked encryption : on top of filesystem
   - *EncFS* (no need to be root)
-  - *Veracrypt* (ex *TrueCrypt*)
+  - *Veracrypt* (former *TrueCrypt*)
 - block encryption : below the filesystem
   - *dm-crypt* native in Linux kernel (use with *LUKS* extension)
