--- a/2.finding_your_way_on_linux/2.1-command_line_basics.md
+++ b/2.finding_your_way_on_linux/2.1-command_line_basics.md
@@ -17,11 +17,11 @@ Partial list of the used files, terms and utilities
 - export
 - type
 
--------
+---
 
 ## Lesson 1
 
-**shell**:
+**Shell**:
 
 - program for text based communication between user and OS
 - interpret text into instructions for Linux
@@ -41,7 +41,7 @@ Prompt: `username@hostname current_directory shell_type`
 eg: `ls -l /home`
 
 **options** also called **flags**
-**arguments**: `-` for short form `--` for long form
+ `-` for short form `--` for long form
 `$ ls -al`
 `$ ls -a -l`
 `$ ls --all --format=long`
@@ -56,7 +56,7 @@ use `type` to know
 #### External
 
 Binary programs or scripts
-Use `PATH` to fnd the binary file
+Use `PATH` to find the binary file
 
 ### Quoting
 
@@ -73,7 +73,7 @@ Use `PATH` to fnd the binary file
 
 #### Escape Character : \
 
-- remove special characters like `$`
+- disable special characters like `$`
 - `$ echo \$USER =>$USER`
 
 ### Commands used in this lesson
