--- a/2.finding_your_way_on_linux/2.2-cli_help.md
+++ b/2.finding_your_way_on_linux/2.2-cli_help.md
@@ -1,7 +1,6 @@
 # 2.2 Using the Command Line to Get Help
 
 **Weight 2**
-
 Key knowledge areas
 
 - Man pages
@@ -14,7 +13,7 @@ Partial list of the used files, terms and utilities
 - /usr/share/doc/
 - locate
 
------
+---
 
 - various tools for help `man`, `help`, `info`, `/usr/share/doc/`
 
@@ -27,12 +26,12 @@ Partial list of the used files, terms and utilities
 - divided in 11 sections
 - organized in 8 categories
 - use less by `default`
-- search with `/` + `N` for next matches
+- search with `/` + `n` for next matches
 
 ## Info Pages
 
 - contains hypertext
-- different nodes withi a tree
+- different nodes within a tree
 - press enter to follow link
 - `?` to search
 
@@ -53,7 +52,7 @@ Partial list of the used files, terms and utilities
 
 - `find . -name *filename*`
 
-## Command used 
+## Command used
 
 **man**
 Display a man page.
