--- a/2.finding_your_way_on_linux/2.3-directories_and_files_listing.md
+++ b/2.finding_your_way_on_linux/2.3-directories_and_files_listing.md
@@ -1,7 +1,6 @@
- # 2.3 Using Directories and Listing Files
+# 2.3 Using Directories and Listing Files
 
 **Weight 2**
-
 Key knowledge areas
 
 - Files, directories
@@ -11,20 +10,21 @@ Key knowledge areas
 
 Partial list of the used files, terms and utilities
 
-- Common options for ls
+- Common options for `ls`
 - Recursive listings
-- cd
-- . and ..
-- home and ~
+- `cd`
+- `.` and `..`
+- `home` and `~`
 
 ---
 
-- `cd` 
+- `cd`
 - `pwd` print working directory
 - `ls`
-  - `ls -a ` all files including hidden files
+  - `ls -a` all files including hidden files
   - `ls -d` only directories and symlink
   - `ls -R` show tree
+  - `ls -r` reverse order
   - `ls -l` listing
   - `ls -t` sorted by date
 - `mkdir`
@@ -32,33 +32,22 @@ Partial list of the used files, terms and utilities
 - `~username` equals to `/home/username/`
 
 **ls -l**
-**`-rw-r--r-- 1 user staff
-3606 Jan 13
-2017 report2018.txt`**
+**`-rw-r--r-- 1 user staff 3606 Jan 13 2017 report2018.txt`**
 
-    **-l** creates a long list. Files and directories will each occupy one line, but additional information
-    about each file and directory will be displayed.
-    **-rw-r—r--**
-    Type of file and permissions of the file. Note that a regular file will begin with dash, and a
-    directory will start with d.
-    **1**
-    Number of links to the file.
-    **user staff**
-    Specifies ownership of the file. user is the owner of the file, and the file is also associated with
-    the staff group.
-    **3606**
-    Size of the file in bytes.
-    **Jan 13 2017**
-    Time stamp of the last modification to the file.
-    **report2018.txt**
-    Name of the file.
+**-l** : creates a long list. Files and directories will each occupy one line, but additional information
+  about each file and directory will be displayed.
+**-rw-r—r--** : Type of file and permissions of the file. Note that a regular file will begin with dash, and a directory will start with d.
+**1** : Number of links to the file.
+**user staff** : Specifies ownership of the file. user is the owner of the file, and the file is also associated with the staff group.
+**3606** : Size of the file in bytes.
+**Jan 13 2017** : Time stamp of the last modification to the file.
+**report2018.txt** : Name of the file.
 
 **ls -lh**
 Combining long list with human readable file sizes
 
 **ls -d \*/**
-The -d option will list directories but not their contents. Combining this with */ will show only
-subdirectories and no files.
+The -d option will list directories but not their contents. Combining this with */ will show only subdirectories and no files.
 
 **ls -lt**
 Combines long list with the option to sort by modification time. The files with the most recent
@@ -83,4 +72,4 @@ subdirectories are not included in the sort.
 The -R option will modify the ls command to display a recursive list.
 
 **du -sh**
-Total size of the directory
+Total size of the directory (s:summarize)
