--- a/2.finding_your_way_on_linux/2.4-creating-moving-deleting-files.md
+++ b/2.finding_your_way_on_linux/2.4-creating-moving-deleting-files.md
@@ -1,7 +1,6 @@
 # 2.4 Creating, Moving and Deleting Files
 
 **Weight 2**
-
 Key knowledge areas
 
 - Files and directories
@@ -14,6 +13,7 @@ Partial list of the used files, terms and utilities
 - mkdir, rmdir
 
 ---
+
 ## CRUD on Files
 
 - `mkdir` create directory
@@ -30,9 +30,6 @@ Partial list of the used files, terms and utilities
 - `cp -u` copy file only if destination is missing or older
 - `cat` read file
 - `pwd` output directory path
-
-
-
 
 ## Globbing
 
@@ -51,21 +48,21 @@ question14
 question15`
 - `[]`
 Matches a class of characters
-
-    - `$ ls file[1-2]`
+  - `$ ls file[1-2]`
     `file1
     file2`
 
-    - `$ ls file[^a]`
+  - `$ ls file[^a]`
     `file1
     file2`
 
-    - `$ ls file[[:digit:]]`
+  - `$ ls file[[:digit:]]`
     `file1
     file2
     file3`
 
-The glob fileThe glob `file[[:digit:]a]`, matches file followed by a digit or a.
+The glob `file[[:digit:]a]`, matches file followed by a digit or a.
+
 The character classes supported depends on your current locale. POSIX requires the following
 character classes for all locales:
 `[:alnum:]`
